tests/lean/crash.lean.expected.out
crash.lean:9:17: error: invalid have-expression, expression
  H
has type
  P
but is expected to have type
  ¬P
crash.lean:10:12: error: don't know how to synthesize placeholder
context:
P : Prop,
H : P,
H' : ¬P
⊢ Sort ?
crash.lean:10:12: error: don't know how to synthesize placeholder
context:
P : Prop,
H : P,
H' : ¬P
⊢ sorry
